# wheezy.html

./: .gitignore  .hgignore  Makefile  README  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  tests.yml
demos/: benchmark_html_escape.py
doc/: conf.py  examples.rst  gettingstarted.rst  index.rst  modules.rst  userguide.rst
requirements/: dev-py2.txt  dev-py3.txt  dev.in  dev.txt  docs.txt
src/wheezy/html/: __init__.py  boost.c  builder.py  comp.py  factory.py  markup.py  utils.py  widgets.py
src/wheezy/html/ext/: __init__.py  jinja2.py  lexer.py  mako.py  parser.py  template.py  tenjin.py
src/wheezy/html/ext/tests/: test_jinja2.py  test_lexer.py  test_mako.py  test_template.py  test_tenjin.py
src/wheezy/html/tests/: test_utils.py
