[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.html"
dynamic = ["version"]
description = "A lightweight html rendering library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "html",
  "widget",
  "markup",
  "mako",
  "jinja2",
  "tenjin",
  "wheezy.template",
  "preprocessor",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Widget Sets",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]
mako = ["mako>=1.3.10"]
tenjin = ["tenjin>=1.1.1"]
jinja2 = ["jinja2>=3.1.6"]
"wheezy.template" = ["wheezy.template>=3.2.4"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.html"
Source = "https://github.com/akornatskyy/wheezy.html"
Issues = "https://github.com/akornatskyy/wheezy.html/issues"

[tool.setuptools]
packages = ["wheezy.html", "wheezy.html.ext"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "wheezy.html.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wheezy/html"]
omit = ["*/test_*.py", "*/tests/*"]
